--- a/index.html
+++ b/index.html
@@ -34,6 +34,13 @@
             </ul>
         </div>
     </nav>
+    <!-- Home -->
+    <section id="home">
+        <img src="imgs/profile.png" alt="Yoon's profile photo" class="home__avatar">
+        <h1 class="home__title">Hello, <br/>I am Comms Coder</h1>
+        <h2 class="home__description">Master of communications. Tell me your imagination, and I will make it visible!</h2>
+        <button class="home__contact">Contact me</button>
+    </section>
     <!-- About -->
     <section id="about"></section>
     <!-- Skills -->
