--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </ul>
         </div>
     </nav>
-    <!-- Home -->
+    <!-- Home delete on next video -->
     <section id="home">
         <img src="imgs/profile.png" alt="Yoon's profile photo" class="home__avatar">
         <h1 class="home__title">Hello, <br/>I am Comms Coder</h1>
