--- a/index.html
+++ b/index.html
@@ -42,7 +42,54 @@
         <button class="home__contact">Contact me</button>
     </section>
     <!-- About -->
-    <section id="about"></section>
+    <section id="about">
+        <h1>About me</h1>
+        <p>I am super cool person</p>
+        <div class="about__majors">
+            <div class="major">
+                <div class="major__icon">
+                    <i class="fab fa-html5"></i>
+                </div>
+                <h2 class="major__title">Front-end</h2>
+                <p class="major__description">
+                    HTML, CSS, JavaScript, TypeScript,
+                    <br>React, Vue, Web APIs
+                </p>
+            </div>
+            <div class="major">
+                <div class="major__icon">
+                    <i class="fas fa-mobile"></i>
+                </div>
+                <h2 class="major__title">Mobile</h2>
+                <p class="major__description">
+                    Android, iOS, React Native, Flutter,
+                    <br>Java, Swift, Kotlin
+                </p>
+            </div>
+            <div class="major">
+                <div class="major__icon">
+                    <i class="fas fa-server"></i>
+                </div>
+                <h2 class="major__title">Back-end</h2>
+                <p class="major__description">
+                    Java, JavaScript, Go, NodeJS,
+                    <br>Rest APIs, GraphGL
+                </p>
+            </div>
+        </div>
+        <div class="about__jobs">
+            <div class="job">
+                <img src="imgs/jobs/nzdf logo.png" alt="NZDF" class="job__logo">
+                <p class="job__name">NZDF</p>
+                <p class="job__period">2011 - Current</p>
+            </div>
+            <div class="job">
+                <img src="imgs/jobs/sefar logo.png" alt="SEFAR" class="job__logo">
+                <p class="job__name">SEFAR</p>
+                <p class="job__period">2010 - 2011</p>
+            </div>
+        </div>
+    </section>
     <!-- Skills -->
     <section id="skills"></section>
     <!-- Work -->
