--- a/index.html
+++ b/index.html
@@ -229,7 +229,26 @@
         </div>
     </section>
     <!-- Testimonials -->
-    <section id="testimonials"></section>
+    <section id="testimonials">
+        <h1>Testimonials</h1>
+        <h3>See what they say about me</h3>
+        <div class="testimonials">
+            <div class="testimonial">
+                <img src="imgs/testimonial/person.png" alt="Person" class="testimonial__avatar">
+                <div class="testimonial__speech-bubble">
+                    <p>Nice guy!</p>
+                    <p class="name"><a href="">Yoon</a>/NZDF</p>
+                </div>
+            </div>
+            <div class="testimonial">
+                <img src="imgs/testimonial/person.png" alt="Person" class="testimonial__avatar">
+                <div class="testimonial__speech-bubble">
+                    <p>Nice guy!</p>
+                    <p class="name"><a href="">Yoon</a>/NZDF</p>
+                </div>
+            </div>
+        </div>
+    </section>
     <!-- Contact -->
     <section id="contact"></section>
 </body>
