--- a/index.html
+++ b/index.html
@@ -250,6 +250,18 @@
         </div>
     </section>
     <!-- Contact -->
-    <section id="contact"></section>
+    <section id="contact">
+        <h1 class="contact__title">Let's talk</h1>
+        <h2 class="contact__email">yoon.shin.255.255@gmail.com</h2>
+        <div class="contact__links">
+            <a href="https://github.com/honeypotable" targer="blank">
+                <i class="fa fa-github"></i>
+            </a>
+            <a href="#" target="blank">
+                <i class="fa fa-linkedin-square"></i>
+            </a>
+        </div>
+        <p>2022 Yoon Shin - All rights reserved</p>
+    </section>
 </body>
 </html>
