--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <button class="home__contact">Contact me</button>
     </section>
     <!-- About -->
-    <section id="about">
+    <section id="about" class="section">
         <h1>About me</h1>
         <p>I am super cool person</p>
         <div class="about__majors">
@@ -80,18 +80,22 @@
         <div class="about__jobs">
             <div class="job">
                 <img src="imgs/jobs/nzdf logo.png" alt="NZDF" class="job__logo">
-                <p class="job__name">NZDF</p>
-                <p class="job__period">2011 - Current</p>
+                <div class="job__description">
+                    <p class="job__name">NZDF</p>
+                    <p class="job__period">2011 - Current</p>
+                </div>
             </div>
             <div class="job">
                 <img src="imgs/jobs/sefar logo.png" alt="SEFAR" class="job__logo">
-                <p class="job__name">SEFAR</p>
-                <p class="job__period">2010 - 2011</p>
+                <div class="job__description">
+                    <p class="job__name">SEFAR</p>
+                    <p class="job__period">2010 - 2011</p>
+                </div>
             </div>
         </div>
     </section>
     <!-- Skills -->
-    <section id="skills">
+    <section id="skills" class="section">
         <h1>Skills</h1>
         <h2>Skills & Attributes</h2>
         <p>
@@ -152,7 +156,7 @@
         </div>
     </section>
     <!-- Work -->
-    <section id="work">
+    <section id="work" class="section">
         <h1>My work</h1>
         <h3>Projects</h3>
         <div class="work__categories">
@@ -229,7 +233,7 @@
         </div>
     </section>
     <!-- Testimonials -->
-    <section id="testimonials">
+    <section id="testimonials" class="section">
         <h1>Testimonials</h1>
         <h3>See what they say about me</h3>
         <div class="testimonials">
@@ -250,7 +254,7 @@
         </div>
     </section>
     <!-- Contact -->
-    <section id="contact">
+    <section id="contact" class="section">
         <h1 class="contact__title">Let's talk</h1>
         <h2 class="contact__email">yoon.shin.255.255@gmail.com</h2>
         <div class="contact__links">
