--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
                 <i class="fa fa-linkedin-square"></i>
             </a>
         </div>
-        <p>2022 Yoon Shin - All rights reserved</p>
+        <p class="contact__rights">2022 Yoon Shin - All rights reserved</p>
     </section>
 </body>
 </html>
