CSS: Fix section container

--- a/index.html
+++ b/index.html
@@ -161,6 +161,7 @@
     </section>
     <!-- Work -->
     <section id="work" class="section">
+       <div class="section__container">
         <h1>My work</h1>
         <h3>Projects</h3>
         <div class="work__categories">
@@ -235,25 +236,27 @@
                 </div>
             </a>
         </div>
+    </div>
     </section>
     <!-- Testimonials -->
     <section id="testimonials" class="section">
-        <h1>Testimonials</h1>
-        <h3>See what they say about me</h3>
-        <div class="testimonials"> 
-            <div class="testimonial">
-                <img src="imgs/testimonial/person.png" alt="Person" class="testimonial__avatar">
-                <div class="testimonial__speech-bubble">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam voluptatibus deleniti cupiditate, amet vero maiores in esse nam dolores debitis iste fugit facere molestiae impedit dicta, et tempora tempore possimus.</p>
-                    <p class="name"><a href="">Yoon</a>/NZDF</p>
+        <div class="section__container"><h1>Testimonials</h1>
+            <h3>See what they say about me</h3>
+            <div class="testimonials"> 
+                <div class="testimonial">
+                    <img src="imgs/testimonial/person.png" alt="Person" class="testimonial__avatar">
+                    <div class="testimonial__speech-bubble">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam voluptatibus deleniti cupiditate, amet vero maiores in esse nam dolores debitis iste fugit facere molestiae impedit dicta, et tempora tempore possimus.</p>
+                        <p class="name"><a href="">Yoon</a>/NZDF</p>
+                    </div>
                 </div>
-            </div>
-            <div class="testimonial">
-                <div class="testimonial__speech-bubble">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla sequi iste atque aut fugiat possimus, vero quidem quod fuga earum aspernatur qui a magnam veritatis ratione quae debitis iure suscipit.</p>
-                    <p class="name"><a href="">Yoon</a>/NZDF</p>
+                <div class="testimonial">
+                    <div class="testimonial__speech-bubble">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla sequi iste atque aut fugiat possimus, vero quidem quod fuga earum aspernatur qui a magnam veritatis ratione quae debitis iure suscipit.</p>
+                        <p class="name"><a href="">Yoon</a>/NZDF</p>
+                    </div>
+                    <img src="imgs/testimonial/person.png" alt="Person" class="testimonial__avatar">
                 </div>
-                <img src="imgs/testimonial/person.png" alt="Person" class="testimonial__avatar">
             </div>
         </div>
     </section>
