--- a/index.html
+++ b/index.html
@@ -39,12 +39,14 @@
             <i class="fas fa-bars"></i>
         </button>
     </nav>
-    <!-- Home delete on next video -->
+    <!-- Home -->
     <section id="home">
-        <img src="imgs/profile.png" alt="Yoon's profile photo" class="home__avatar">
-        <h1 class="home__title">Hello, <br/>I am Comms Coder</h1>
-        <h2 class="home__description">Master of communications. Tell me your imagination, and I will make it visible!</h2>
-        <button class="home__contact">Contact me</button>
+        <div class="home__container">
+            <img src="imgs/profile.png" alt="Yoon's profile photo" class="home__avatar">
+            <h1 class="home__title">Hello, <br/>I am Comms Coder</h1>
+            <h2 class="home__description">Master of communications. Tell me your imagination, and I will make it visible!</h2>
+            <button class="home__contact">Contact me</button>
+        </div>
     </section>
     <!-- About -->
     <section id="about" class="section section__container">
