--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
             <i class="fas fa-bars"></i>
         </button>
     </nav>
+
     <!-- Home -->
     <section id="home">
         <div class="home__container">
@@ -48,6 +49,7 @@
             <button class="home__contact">Contact me</button>
         </div>
     </section>
+
     <!-- About -->
     <section id="about" class="section section__container">
         <h1>About me</h1>
@@ -101,6 +103,7 @@
             </div>
         </div>
     </section>
+
     <!-- Skills -->
     <section id="skills" class="section">
         <div class="section__container">
@@ -166,9 +169,10 @@
 
         </div>
     </section>
+
     <!-- Work -->
     <section id="work" class="section">
-       <div class="section__container">
+        <div class="section__container">
         <h1>My work</h1>
         <h3>Projects</h3>
         <div class="work__categories">
@@ -243,8 +247,9 @@
                 </div>
             </a>
         </div>
-    </div>
+        </div>
     </section>
+
     <!-- Testimonials -->
     <section id="testimonials" class="section">
         <div class="section__container"><h1>Testimonials</h1>
@@ -267,6 +272,7 @@
             </div>
         </div>
     </section>
+
     <!-- Contact -->
     <section id="contact" class="section">
         <h1 class="contact__title">Let's talk</h1>
@@ -281,5 +287,11 @@
         </div>
         <p class="contact__rights">2022 Yoon Shin - All rights reserved</p>
     </section>
+
+    <!-- Arrow up -->
+    <button class="arrow-up">
+        <i class="fas fa-arrow-up"></i>
+    </button>
+
 </body>
 </html>
