--- a/index.html
+++ b/index.html
@@ -176,70 +176,70 @@
         <h1>My work</h1>
         <h3>Projects</h3>
         <div class="work__categories">
-            <button class="category__btn active">
+            <button class="category__btn active" data-filter="*">
                 All<span class="category__count">8</span>
             </button>
-            <button class="category__btn">
+            <button class="category__btn" data-filter="front-end">
                 Front-end<span class="category__count">3</span>
             </button>
-            <button class="category__btn">
+            <button class="category__btn" data-filter="back-end">
                 Back-end<span class="category__count">3</span>
             </button>
-            <button class="category__btn">
+            <button class="category__btn" data-filter="mobile">
                 Mobile<span class="category__count">2</span>
             </button>
         </div>
         <div class="work__projects">
-            <a href="https://ras.nzdf.mil.nz" class="project" target="blank">
+            <a href="https://ras.nzdf.mil.nz" class="project" target="blank" data-type="front-end">
                 <img class="project__img" src="imgs/projects/nzdf logo.png" alt="NZDF">
                 <div class="project__description">
                     <h3>NZDF site</h3>
                     <span>Clone coding with HTML and CSS</span>
                 </div>
             </a>
-            <a href="https://ras.nzdf.mil.nz" class="project" target="blank">
+            <a href="https://ras.nzdf.mil.nz" class="project" target="blank" data-type="front-end">
                 <img class="project__img" src="imgs/projects/nzdf logo.png" alt="NZDF">
                 <div class="project__description">
                     <h3>NZDF site</h3>
                     <span>Clone coding with HTML and CSS</span>
                 </div>
             </a>
-            <a href="https://ras.nzdf.mil.nz" class="project" target="blank">
+            <a href="https://ras.nzdf.mil.nz" class="project" target="blank" data-type="front-end">
                 <img class="project__img" src="imgs/projects/nzdf logo.png" alt="NZDF">
                 <div class="project__description">
                     <h3>NZDF site</h3>
                     <span>Clone coding with HTML and CSS</span>
                 </div>
             </a>
-            <a href="https://ras.nzdf.mil.nz" class="project" target="blank">
+            <a href="https://ras.nzdf.mil.nz" class="project" target="blank" data-type="back-end">
                 <img class="project__img" src="imgs/projects/nzdf logo.png" alt="NZDF">
                 <div class="project__description">
                     <h3>NZDF site</h3>
                     <span>Clone coding with HTML and CSS</span>
                 </div>
             </a>
-            <a href="https://ras.nzdf.mil.nz" class="project" target="blank">
+            <a href="https://ras.nzdf.mil.nz" class="project" target="blank" data-type="back-end">
                 <img class="project__img" src="imgs/projects/nzdf logo.png" alt="NZDF">
                 <div class="project__description">
                     <h3>NZDF site</h3>
                     <span>Clone coding with HTML and CSS</span>
                 </div>
             </a>
-            <a href="https://ras.nzdf.mil.nz" class="project" target="blank">
+            <a href="https://ras.nzdf.mil.nz" class="project" target="blank" data-type="back-end">
                 <img class="project__img" src="imgs/projects/nzdf logo.png" alt="NZDF">
                 <div class="project__description">
                     <h3>NZDF site</h3>
                     <span>Clone coding with HTML and CSS</span>
                 </div>
             </a>
-            <a href="https://ras.nzdf.mil.nz" class="project" target="blank">
+            <a href="https://ras.nzdf.mil.nz" class="project" target="blank" data-type="mobile">
                 <img class="project__img" src="imgs/projects/nzdf logo.png" alt="NZDF">
                 <div class="project__description">
                     <h3>NZDF site</h3>
                     <span>Clone coding with HTML and CSS</span>
                 </div>
             </a>
-            <a href="https://ras.nzdf.mil.nz" class="project" target="blank">
+            <a href="https://ras.nzdf.mil.nz" class="project" target="blank" data-type="mobile">
                 <img class="project__img" src="imgs/projects/nzdf logo.png" alt="NZDF">
                 <div class="project__description">
                     <h3>NZDF site</h3>
